# compiler

./: CMakeLists.txt  CMakeSettings.json  README.md  example.croc
src/: codegen.c  codegen.h  environment.c  environment.h  error.c  error.h  file_io.c  file_io.h  main.c  parser.c  parser.h  typechecker.c  typechecker.h
